--- a/app/views/login/show.html.erb
+++ b/app/views/login/show.html.erb
@@ -1,5 +1,8 @@
-<div class="jumbotron text-center">
-  <h3 class="display-4 ">BEAUTIFUL CODE HIRING</h3>
-  <hr class="my-4">
-  <button class="btn btn-warning"><a href="/auth/google_oauth2">Sign in with your beautiful code account</a></button>
+<div class="container-fluid h-100" style="padding:0">
+  <div class="jumbotron text-center h-100">
+      <img src="https://www.beautifulcode.co/assets/logo-9bfde9e3d927e22049e07f53c02aecf80072413feb5e6af98684f9d554bf3b85.svg" width="50%" />
+      <hr class="my-4">
+      <button class="btn btn-primary col-bg-primary"><a class="col-fg-white" href="/auth/google_oauth2">Sign in with BeautifulCode account</a></button>
+    </div>
 </div>
+    
