--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -40,10 +40,12 @@
 		</div>
 	</div>
 
-	<div class="form-group">
-		<%= form.label :resume, class: "col-md-4 control-label"  %>
+	<div class="input-group">
 		<div class="col-md-8">
-			<%= form.file_field :resume, class: "form-control"  %>
+			<div class="custom-file">
+				<%= form.label :resume, class: "custom-file-label"  %>
+				<%= form.file_field :resume, class: "custom-file-input"  %>
+			</div>
 		</div>
 	</div>
 
@@ -75,6 +77,9 @@
 		</div>
 	</div>
 
-	<button class="btn btn-info ml-3" type="submit">Submit</button>
+	<div class="btn-toolbar">
+	<div class="btn-group mr-2">
+		<button class="btn col-fg-white col-bg-primary ml-3" type="submit">Submit</button>
+	</div>
 
 <% end %>
