--- a/app/views/applications/inprogress_applications.html.erb
+++ b/app/views/applications/inprogress_applications.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<div class="container bg-light">
+<div class="container bg-light shadow-sm rounded" style="padding: 16px">
 	<div class="row ">
 		<div class="col-12">
 			<h1>In Progress Applications</h1>
-
+			<hr />
 			<table class="table table-striped table-bordered" id="myTable">
 				<thead>
 					<tr>
