--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,11 +1,14 @@
-<div class="container center_div ">
-	<div class="row bg-light">
-		<div class="col-3">
-		</div>
+<div class="container bg-light shadow-sm rounded" style="padding: 16px; margin:16px auto">
+	<div class="row justify-content-center">
 		<div class="col-9 pt-3">
 			<h2>New Application</h2>
+			<hr />
 			<%= render 'form', application: @application %>
-			<%= link_to 'Back', applications_path , class: "btn btn-info mt-1 ml-3"%>
+
+			<div class="btn-group mr-2">
+				<%= link_to 'Back', applications_path , class: "btn col-fg-white col-bg-primary ml-3"%>
+			</div>
+			</div>
 		</div>
 	</div>
 </div>
